<resources>
    <string name="app_name">Nazokat Ollayor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_name">Kompaniya nomi</string>
    <string name="str_sell">Продажи</string>
    <string name="str_cheques">Чеки</string>
    <string name="str_cheque">Чек</string>
    <string name="str_products">Товары</string>
    <string name="str_categories">Категории</string>
    <string name="str_printers">Принтеры</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="print_cheque">РАСПЕЧАТАТЬ ЧЕК</string>
    <string name="no_products">У вас пока нет товаров</string>
    <string name="no_printer">У вас пока нет принтер</string>
    <string name="no_categories">У вас пока нет категорий</string>
    <string name="no_products_info">Перейдите в меню “Товары”, чтобы\nдобавить товар</string>
    <string name="no_categories_info">Перейдите в меню “Товары”, чтобы\nдобавить категорию</string>
    <string name="open_products">ПЕРЕЙТИ В ТОВАРЫ</string>
    <string name="str_add_product">Чтоби добавить товар нажмите кнопку (+)</string>
    <string name="str_add_printer">Чтоби добавить принтер нажмите кнопку (+)</string>
    <string name="str_name">Название</string>
    <string name="str_category">Категория</string>
    <string name="str_by_piece">Поштучно</string>
    <string name="str_sold">Продается</string>
    <string name="str_by_weight">На вес</string>
    <string name="str_price">Цена</string>
    <string name="str_delete_product">УДАЛИТЬ ТОВАР</string>
    <string name="str_continue">ПРОДОЛЖИТЬ</string>
    <string name="str_unsaved_changes">Несохраненные изменения</string>
    <string name="str_unsaved_changes_msg">Вы действительно хотите продолжить без сохранения изменений?</string>
    <string name="str_cancel">ОТМЕНА</string>
    <string name="str_all_products">Все товары</string>
    <string name="str_save">сохранить</string>
    <string name="str_create_category">Создание категории</string>
    <string name="str_create_product">Создание товара</string>
    <string name="str_non_category">Без категории</string>
    <string name="non">Non</string>
    <string name="_3_000">3,000</string>
    <string name="str_none_product">0 товаров</string>
    <string name="non_mahsulotlari">Non mahsulotlari</string>
    <string name="str_category_name">Название категории</string>
    <string name="str_clear_cheque">Очистить чек</string>
    <string name="str_sync">Синхронизировать</string>
    <string name="str_all_categories">Категории</string>
    <string name="str_receipt_clearing">Очистка чека</string>
    <string name="str_receipt_clearing_info">Вы действительно хотите очистить чек?</string>
    <string name="str_clear">ОЧИСТИТЬ</string>
    <string name="str_search">Поиск</string>
    <string name="no_cheques">У вас пока нет чеков</string>
    <string name="str_edit___">Редактирование...</string>
    <string name="str_log_out">Выйти</string>
    <string name="str_add_product_to_category">ПРИМЕНИТЬ К ТОВАРАМ</string>
    <string name="str_delete_category">УДАЛИТЬ КАТЕГОРИЮ</string>
    <string name="str_all_printers">Принтеры</string>
    <string name="str_add_product_to_category_">Добавить товар...</string>
    <string name="str_search_product">Поиск товара</string>
    <string name="_1_1002">#1-1002</string>
    <string name="_3_10_pm">3:10 PM</string>
    <string name="_15_000">15,000</string>
    <string name="str_time">вторник, 16 августа 2022 г.</string>
    <string name="str_total">Итого</string>
    <string name="_3_x_5_000">3 x 5,000</string>
    <string name="_16_08_2022_3_10_pm">16.08.2022 3:10 PM</string>
    <string name="ogabekdev">OgabekDev</string>
    <string name="str_saved">Сохранено</string>
    <string name="str_add_person_to_cheque">Добавление клиента к чеку</string>
    <string name="str_add_new_customer">ДОБАВИТЬ НОВОГО КЛИЕНТА</string>
    <string name="str_last_customer">Последние клиенты</string>
    <string name="str_customers_list">Здесь будут отображаться ваши последние клиенты</string>
    <string name="str_password">Пароль</string>
    <string name="str_login">ВОЙТИ</string>
    <string name="str_log_in">Вход</string>
    <string name="str_wrong_password">Неправильный пароль</string>
    <string name="ok">ОК</string>
    <string name="str_save_customer">Создание клиента</string>
    <string name="str_firstName">Имя</string>
    <string name="str_note">Заметка</string>
    <string name="str_phone">Телефон</string>
    <string name="str_visits">Посещений</string>
    <string name="str_last_visit">Последнее посещение</string>
    <string name="_16_08_2022">16 авг. 2022 г.</string>
    <string name="str_edit_profile">РЕДАКТИРОВАТЬ ПРОФИЛь</string>
    <string name="str_view_shopping">ПОСМОТРЕТЬ ПОКУПКИ</string>
    <string name="str_add_to_cheque">ДОБАВИТЬ В ЧЕК</string>
    <string name="str_customer_profile">Профиль клиента</string>
    <string name="sut_x_1">Sut x 1</string>
    <string name="str_print_cheque">Распечатать чек\n</string>
    <string name="str_save_cheque">сохранить чек</string>
    <string name="str_search_by_cheque_number">Поиск по номеру чека</string>
    <string name="str_cheque_history">История покупок</string>
    <string name="str_quantity">Количество</string>

    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>

    <string name="_.">.</string>
    <string name="str_ok">ОК</string>
    <string name="str_no_cheques_to_clear">У вас нет чеков для очистки</string>
    <string name="str_all_done">Все сделано</string>
    <string name="str_fill_fields">Заполните поля</string>
    <string name="str_edit_category">Редактирование категории</string>
    <string name="str_ip_address_printer">IP - адрес принтера</string>
    <string name="str_delete_printer">удалить принтер</string>
    <string name="str_test_printer">тестовая печать</string>
    <string name="str_create_printer">Создание принтера</string>

    <string name="bluetooth_devices">Bluetooth устройства</string>
    <string name="connect">Connect</string>
    <string name="print">Print</string>
    <string name="str_refresh">обновить</string>
    <string name="darital_optom">Даритал оптом</string>
    <string name="_134">134-дўкон</string>
    <string name="nazokat">Назокат</string>
    <string name="str_delete_title">Хотите удалить товара?</string>
    <string name="str_delete_msg">Действительно хотите удалить товара?</string>
    <string name="str_delete">Удалить</string>
    <string name="str_cancel_">Отмена</string>
    <string name="str_delete_title_category">Хотите удалить категорию?</string>
    <string name="str_delete_category_msg">Действительно хотите удалить категорию?</string>
    <string name="str_cheque_saved">Чек сохранен</string>
    <string name="str_send_to_printer">Чек отправлен принтеру</string>
    <string name="str_connected">Принтер уже добавлен</string>
    <string name="str_printer_name">Имя принтера</string>
    <string name="str_already_have">Имя принтера уже существует</string>
    <string name="str_connection_failed">Ошибка подключения</string>
    <string name="str_never_edit">Название позже невозможно изменить</string>

</resources>
