<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.CreateProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:hint="@string/str_name"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_regular"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/sCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            tools:listitem="@android:layout/simple_spinner_item"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sold"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter_regular"/>

            <RadioButton
                android:id="@+id/rbByPiece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/str_by_piece"/>

            <RadioButton
                android:id="@+id/rbByWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/str_by_weight"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/inter_regular"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:hint="@string/str_price"
                android:inputType="numberDecimal"
                android:digits="1234567890"
                android:textColor="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>