<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CreatePrinterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPrinterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:hint="@string/str_name"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_regular"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:text="@string/str_never_edit"/>

        <Spinner
            android:id="@+id/sType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            tools:listitem="@android:layout/simple_spinner_item"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/llPrinterAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:visibility="visible"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etPrinterAddress"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_ip_address_printer"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="15sp"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/llTestPrint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/v_stroke"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/str_test_printer"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDeletePrinter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/v_stroke"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:layout_margin="10dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/str_delete_printer"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>