<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.ChangeAmountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_quantity"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/inter_medium"
            android:textSize="18sp"
            android:textColor="#191919"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#191919"
                android:textSize="32sp"
                android:fontFamily="@font/inter_medium"
                android:layout_marginStart="10dp"
                android:text="@string/_0"/>

            <ImageView
                android:id="@+id/ivBackspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_backspace"
                android:layout_marginEnd="10dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_1"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_2"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_3"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_4"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_5"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_6"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_7"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_8"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_9"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                android:orientation="horizontal">

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tvDot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_."
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tv0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_0"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/black"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:background="@drawable/v_stroke"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    tools:ignore="NestedWeights">

                    <TextView
                        android:id="@+id/tvOK"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/str_ok"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="28sp"
                        android:textColor="@color/main_color"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>