<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.UpdateCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/str_category_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:background="@drawable/v_stroke"
            android:padding="20dp">

            <Button
                android:id="@+id/btnAddProductToCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/v_blue_stroke"
                app:backgroundTint="@null"
                android:textSize="13sp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/str_add_product_to_category"
                android:textColor="#4190DA"/>

            <Button
                android:id="@+id/btnCreateProductToCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/v_blue_stroke"
                app:backgroundTint="@null"
                android:textSize="13sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/str_create_product"
                android:textColor="#4190DA"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llProductDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/v_stroke"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_delete"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/str_delete_category"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</FrameLayout>